; ModuleID = '/home/carl/AnghaBench/libgit2/script/extr_user_model.c_git_buf_vprintf.c'
source_filename = "/home/carl/AnghaBench/libgit2/script/extr_user_model.c_git_buf_vprintf.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_3__ = type { i64, i32 }

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @git_buf_vprintf(%struct.TYPE_3__* %0, i8* %1, i64 %2) #0 {
  %4 = alloca %struct.TYPE_3__*, align 8
  %5 = alloca i8*, align 8
  %6 = alloca i64, align 8
  %7 = alloca i8, align 1
  %8 = alloca i8*, align 8
  %9 = alloca i64, align 8
  store %struct.TYPE_3__* %0, %struct.TYPE_3__** %4, align 8
  store i8* %1, i8** %5, align 8
  store i64 %2, i64* %6, align 8
  %10 = load i8*, i8** %5, align 8
  %11 = call i32 @__coverity_string_null_sink__(i8* %10)
  %12 = load i8*, i8** %5, align 8
  %13 = call i32 @__coverity_string_size_sink__(i8* %12)
  %14 = load i8*, i8** %5, align 8
  %15 = load i8, i8* %14, align 1
  store i8 %15, i8* %7, align 1
  %16 = load i64, i64* %6, align 8
  %17 = inttoptr i64 %16 to i8*
  %18 = load i8, i8* %17, align 1
  store i8 %18, i8* %7, align 1
  %19 = load i64, i64* %9, align 8
  %20 = call i32 @__coverity_alloc__(i64 %19)
  %21 = load %struct.TYPE_3__*, %struct.TYPE_3__** %4, align 8
  %22 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %21, i32 0, i32 1
  store i32 %20, i32* %22, align 8
  %23 = load %struct.TYPE_3__*, %struct.TYPE_3__** %4, align 8
  %24 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %23, i32 0, i32 1
  %25 = load i32, i32* %24, align 8
  %26 = call i32 @__coverity_writeall__(i32 %25)
  %27 = load i64, i64* %9, align 8
  %28 = load %struct.TYPE_3__*, %struct.TYPE_3__** %4, align 8
  %29 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %28, i32 0, i32 0
  store i64 %27, i64* %29, align 8
  ret i32 0
}

declare dso_local i32 @__coverity_string_null_sink__(i8*) #1

declare dso_local i32 @__coverity_string_size_sink__(i8*) #1

declare dso_local i32 @__coverity_alloc__(i64) #1

declare dso_local i32 @__coverity_writeall__(i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
